2014-04-12	Kevin Zheng
	* utils/cfmeta-rrd: Retire since it no longer works with new metaserver.
	* utils/checkInternalPrototype.sh: Retire in favor of compiler flags.
	* utils/crossfire-loop.c: Retire in favor of shell script.
	* utils/get_release.in: Retire since CVS is gone.
	* utils/update_rp: Retire since CVS is gone.

2014-04-07	Kevin Zheng
	* utils/crossloop.in: Remove flags related to non-default plugins.

2014-04-06	Kevin Zheng
	* server/init.c: Clean up and sort command-line arguments.
	* server/move.c: Clean up "start to attack" message.
	* server/server.c: Retire des_crypt(3) in favor of crypt(3).

==============================================================================
Changes for 1.71.0
==============================================================================

2014-03-29	Kevin Zheng
	* server/server.c: Fix emergency map.

2014-03-17	Kevin Zheng
	* devel/crossfire-config.c: Retire build parameter dumper.

2014-03-04	Kevin Zheng
	* configure.ac: Disable newspaper and logger plugin by default.
	* server/: Reduce unnecessary startup verbosity.
	* server/misc.c: Shorten log level messages.

2014-01-01	Nicolas Weeger
	* common/map.c: Ensure objects are on a valid map position.

2013-11-29	SilverNexus
	* server/attack.c: Added damage for when a player burns an equipped
	item (e.g. with flint and steel). Should help balance the utility of
	the flint and steel.

2013-11-10	SilverNexus
	Fix for bug #762: Permadeath segfault on dead character load.

	* socket/request.c: do not send dead characters' information to the client
	* include/account_char.h: add a flag for dead characters
	* server/player.c: add account name to dead player's slaying field
	* server/account_char.c: add handling for new flag for dead characters
	* server/resurrection.c: make resurrection reset the dead character
	flag on a successful resurrection

2013-09-07	Andreas Kirschbaum
	Properly track cast spells. Fixes infrequent server crashes due to 100%
	CPU load.
